<resources>
    <string name="app_name">GDSC_project_app</string>
    <string name="app_icon">GDSC_project_app</string>

    // for Parse SDK
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">yvEO7yE9aWqxurhUv65BAvD6zCVqw4sPNgRySxLF</string>
    <string name="back4app_client_key">eY6e8cxClOEFf7s4vzvCNFJEoXSdZT3pYuHKzanj</string>

    // for activity_login
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strLogin">Login</string>
    <string name="strAppLogo">app logo</string>

    // for activity_main
    <string name="strProfile">Profile</string>
    <string name="strSwipe">Swipe</string>
    <string name="strRoom">Room</string>

    // for activity_room
    <string name="strReturnFromRoom">Back</string>
    <string name="strRoomTopic">Topic: Food</string>

    // for item_Post
    <string name="strViewReply">Replies</string>
    <string name="strUserpic">Userpic</string>

    // for item_swipe_card
    <string name="strQuestion">Question</string>

    // for swipe_card
    <string name="strFinQuestions">You have answered all the questions for now.</string>

    // for activity_post
    <string name="strMakePost">Post</string>
    <string name="strPostHint">description..."</string>
    <string name="strReturnFromPost">Cancel</string>

    //for swipe
    <string name="strSwipeDone">You are done swiping for now....</string>

    //for profile fragment
    <string name="strLogOut">Log Out</string>

    // for activity_signup
    <string name="strSignUp">Sign Up</string>
    <string name="strEmail">Email</string>

</resources>