<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivPostUserPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/btnReturnFromPost"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-2dp"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <Button
        android:id="@+id/btnMakePost"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/tiContentLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="319dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/strMakePost"
        android:textSize="11sp"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="310dp" />

    <TextView
        android:id="@+id/tvPostingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivPostUserPic"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/ivPostUserPic"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Doggo370" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPostingName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/ivPostUserPic"
        android:hint="@string/strPostHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiContentInput"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="0dp"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnReturnFromPost"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/strReturnFromPost"
        android:textSize="11sp" />

</RelativeLayout>